--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ body{
     font-size: 30px;
     font-weight: 600;
     margin-top: 6%;
+    letter-spacing: -1.8px;
 }
 #about-us ul li{
     margin:10px 0;
@@ -130,8 +131,9 @@ body{
 }
 #testimonials .title{
     font-weight: 500;
+    letter-spacing: -1.8px;
     margin: 30px;
-    font-size: 35px;
+    font-size: 34px;
 }
 .testimonials img{
     height: 60px;
