--- a/style.css
+++ b/style.css
@@ -70,6 +70,8 @@ body{
     font-weight: 500;
     margin: 30px;
     font-size: 35px;
+    letter-spacing: -1.8px;
+
 }
 .title::before{
     content:'';
@@ -134,6 +136,7 @@ body{
     letter-spacing: -1.8px;
     margin: 30px;
     font-size: 34px;
+    display: inline-block;
 }
 .testimonials img{
     height: 60px;
