--- a/style.css
+++ b/style.css
@@ -134,9 +134,10 @@ body{
 #testimonials .title{
     font-weight: 500;
     letter-spacing: -1.8px;
-    margin: 30px;
+    margin: 28px;
     font-size: 34px;
     display: inline-block;
+    text-align: center;
 }
 .testimonials img{
     height: 60px;
