--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body{
     position: sticky;
     top:0;
     z-index: 10;
+    background-image: linear-gradient(to right,#070aa2,#021248);
+
 }
 .fa-bars{
     color: wheat;
@@ -108,18 +110,32 @@ body{
     padding-bottom: 50px;
     padding-top: 50px;
 }
+
 .about-title{
-    font-size: 30px;
-    font-weight: 600;
-    margin-top: 6%;
+    font-weight: 500;
     letter-spacing: -1.8px;
+    margin: 28px;
+    font-size: 34px;
+    display: inline-block;
+    text-align: center;
 }
 #about-us ul li{
     margin:10px 0;
+    margin-top: 10px;
+    margin-left: 100px;
+    font-size: 20px;
+    font-weight: 500;
 }
+#about-us img{
+    margin-left: 0px;
+}
+#about-us p{
+    margin-right: 100px;
+}
+
 #about-us ul
 {
-    margin-left: 20px;
+    margin-left: 8px;
 }
 #testimonials
 {
