--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     font-family:  sans-serif;
 }
 #navbar{
+    
     position: sticky;
     top:0;
     z-index: 10;
@@ -229,12 +230,10 @@ body{
     display: block;
     transform: translateY(-8px);
 }
-.sr{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin-top:50px;
-    margin-bottom:80px;
+
+.sp{
+    margin-top: 100px;
+    margin-bottom: 100px;
 
 }
 
