--- a/style.css
+++ b/style.css
@@ -235,6 +235,16 @@ body{
     margin-top: 100px;
     margin-bottom: 100px;
 
+
+}
+#sp{
+
+    background-color: #eae8e844;
+    padding:10px 0;
+    margin-top: 80px;
+    margin-bottom: 50px;
+
+
 }
 
 .counter-box {
