--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     position: sticky;
     top:0;
     z-index: 10;
-    background-image: linear-gradient(to right,#070aa2,#021248);
+    background-image: linear-gradient(to right,#64074e,#340235);
 
 }
 .fa-bars{
@@ -19,7 +19,7 @@ body{
 }
 .navbar
 {
-    background-image: linear-gradient(to right,#070aa2,#021248);
+    background-image: linear-gradient(to right,#64074e,#340235);
     padding: 0 !important;
 }
 .navbar-brand img{
@@ -42,7 +42,7 @@ body{
 }
 /*-------------------------------------------------------->*/
 #banner{
-    background-image: linear-gradient(to right,#070aa2,#021248);
+    background-image: linear-gradient(to right,#64074e,#340235);
     color: #fff;
     padding: 5%;
 }
@@ -62,12 +62,11 @@ body{
 }
 .service-img{
     width:100px;
-    margin-top: 30px;
+    margin-bottom: 30px;
 }
 .services h4{
-    padding:5px;
+    padding:25px;
     margin-top: 25px;
-    text-transform: uppercase;
 }
 .title{
     font-weight: 500;
@@ -78,7 +77,7 @@ body{
 }
 .title::before{
     content:'';
-    background: #070aa2;
+    background: #340235;
     height: 5px;
     width:200px;
     margin-left: auto;
@@ -89,7 +88,7 @@ body{
 }
 .title::after{
     content:'';
-    background: #070aa2;
+    background: #340235;
     height: 11px;
     width:50px;
     margin-left: auto;
@@ -98,13 +97,21 @@ body{
     transform: translateY(3px);
 
 }
+.btn{
+    background: #d00dde;
+    font-family:'Times New Roman', Times, serif;
+    font-size: larger;
+}
 #services .btn-primary{
     box-shadow: none;
-    padding: 8px 25px;
+    padding: 12px 25px;
     border: none;
     border-radius: 20px;
-    margin:7px;
-    background-image: linear-gradient(to right,#070aa2,#021248);
+    margin:50px;
+    background-image: linear-gradient(to right,#64074e,#340235);
+}
+.title{
+    margin:60px;
 }
 #about-us{
     background: #efeff3af;
@@ -114,7 +121,7 @@ body{
 
 .about-title{
     font-weight: 500;
-    letter-spacing: -1.8px;
+    letter-spacing:3px;
     margin: 28px;
     font-size: 34px;
     display: inline-block;
@@ -144,7 +151,7 @@ body{
 }
 .testimonials
 {
-    border-left:4px solid #050780;
+    border-left:4px solid #340235;
     margin-top: 50px;
     margin-bottom: 50px;
 }
@@ -167,7 +174,7 @@ body{
     font-size: 15px;
 }
 #social{
-    background: #efeff3af;
+    background: #f3f3f3af;
     padding:100px 0;
 }
 #social p{
@@ -181,7 +188,8 @@ body{
     transform: translateY(-10px);
 }
 #footer{
-    background-image: linear-gradient(to right,#070aa2,#021248);
+    background-image: linear-gradient(to right,#64074e,
+        #340235);
     color:#fff ;    
 }
 .footer{
@@ -198,7 +206,8 @@ body{
     text-align: center;
     border-radius: 20%;
     color:white;
-    background-image: linear-gradient(to right,#070aa2,#021248);
+    background-image: linear-gradient(to right,#64074e,
+        #340235);
 }
 .suggest .form{
     margin-top:2px;
@@ -239,10 +248,11 @@ body{
 }
 #sp{
 
-    background-color: #eae8e844;
-    padding:10px 0;
+       padding:10px 0;
     margin-top: 80px;
     margin-bottom: 50px;
+    width: auto;
+    
 
 
 }
@@ -257,7 +267,8 @@ body{
 .counter-box p {
 	margin: 5px 0 0;
 	padding: 0;
-	color: #070aa2;
+	color: #340235;
+        
 	font-size: 18px;
 	font-weight: 500
 }
@@ -271,12 +282,12 @@ body{
 	display: block;
 	font-size: 22px;
 	font-weight: 700;
-	color: #070aa2;
+	color: #2d0130;
 	line-height: 28px
 }
 
 .counter-box.colored {
-      background: #070aa2;
+      background: #340235;
 }
 
 .counter-box.colored p,
@@ -292,7 +303,7 @@ body{
     width:42px;
     border-radius: 60%;
     border:none;
-    background-color: #65035b;
+    background-color: #340235;
     color:white;
     text-shadow: 2px 2px 2px 2px rgb(239, 239, 242);
     cursor: pointer;
@@ -304,3 +315,69 @@ body{
     width:40px;
     font-size: 25px;
 }
+#tutorial{
+background: #efeff3af;
+margin: 2px;
+padding: 20px;
+}
+  .carousel {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+
+  .carousel-inner {
+      text-align: center;
+  }
+  .carousel-inner img{
+    width:100%;
+    height:500px;
+  }
+
+  .carousel-indicators li {
+      width: 20px;
+      height: 20px;
+      border-radius: 60%;
+      color:#2d0130;
+      background-color: rgb(17, 16, 16);
+  }
+
+  .carousel-indicators .active {
+      background-color: #2e0031;
+  }
+  .carousel-control-next{
+    background-color: #2d0130;
+    width:30px;
+    color:green;
+  }
+   .carousel-control-prev {
+       background-color: #2d0130;
+       width: 30px;
+       color: green;
+   }
+  .titl{
+    color:white;
+    margin: 5px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+  .case{
+    border: 2px solid purple;
+    border-radius: 10px;
+    padding:40px;
+    box-shadow: 1px 1px 5px 3px grey;
+    padding-bottom: 20px;
+    margin-right: 40px;
+    margin-bottom:10px;
+
+
+  }
+  #services{
+    width:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   
+  
+  }
+ 
+ 
